--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/start.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +15,14 @@
     "mongodb": "^3.1.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/register": "^7.7.7",
     "@types/express-graphql": "^0.6.2",
     "@types/graphql": "^14.0.3",
     "@types/mongodb": "^3.1.15",
-    "typescript": "^3.2.2",
-    "ts-node": "^7.0.1"
+    "babel-polyfill": "^6.26.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2"
   }
 }
