--- a/examples/express/tsconfig.json
+++ b/examples/express/tsconfig.json
@@ -3,9 +3,9 @@
         "target": "es5",
         "module": "commonjs",
         "lib": [
-            "es7",
+            "es6",
             "dom",
-            "esnext.asynciterable"
+            "esnext.asynciterable",
         ],
         "allowSyntheticDefaultImports": true,
         "moduleResolution": "node",
